--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Sua Planta</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous">
     <link rel="stylesheet" href="css/estilo.css">
+    <script>
+        function mostra(){
+            var bt= document.getElementsByClassName(btn)
+        }
+    </script>
 </head>
 <body>
     <div class="container">
